--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "GitHub Action to deploy MSIX Packages to the Windows Store. Most code was taken from https://github.com/Microsoft/windows-dev-center-vsts-extension",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn src/publish.ts",
+    "publish": "node --trace-warnings -r ts-node/register -r tsconfig-paths/register src/publish.ts"
   },
   "repository": {
     "type": "git",
