--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
   },
   "devDependencies": {
     "@types/node": "^13.7.1",
+    "@types/q": "^1.5.5",
+    "@types/request": "^2.48.8",
     "@types/uuid": "^8.3.0",
     "del": "^2.2.2",
+    "node-notifier": "^9.0.1",
     "shelljs": "^0.7.3",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.5",
-    "node-notifier": "^9.0.1"
+    "typescript": "^3.7.5"
   }
 }
